--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,4 +40,16 @@ jobs:
     - name: Build
       run: |
         cd functions
-        npm run build 
+        npm run build
+
+  validate:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Setup Firebase CLI
+      run: npm install -g firebase-tools
+      
+    - name: Validate Extension
+      run: firebase ext:dev:validate . 
