--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "nodemailer": "^6.9.1",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "@google-cloud/firestore": "^6.7.0"
   },
   "private": true
 } 
