--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,8 @@
 {
   "name": "gulyaly-email-send-trigger",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "description": "Firebase Extension для отправки email при создании документа в Firestore",
-  "main": "index.js",
-  "type": "module",
+  "main": "src/index.js",
   "engines": {
     "node": "18"
   },
